docs/assets/style.css
body {
    background-color: rgb(46, 47, 63);
}

.jumbotron {
    position:relative;
    overflow:hidden;
  }
  
  .jumbotron .container {
    position:relative;
    z-index:2;
    
    background:rgba(202, 199, 199, 0.4);
    padding:2rem;
    border:1px solid rgba(0,0,0,0.1);
    border-radius:3px;
  }
  
  .jumbotron-background {
    object-fit:cover;
    font-family: 'object-fit: cover;';
    position:absolute;
    top:0;
    z-index:1;
    width:100%;
    height:100%;
    opacity:0.5;
  }
  
  img.blur {
    -webkit-filter: blur(4px);
    filter: blur(4px);
    filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');
    width:100%;
  }

.navbar-dark .navbar-brand{
    padding:10px; 
    color: rgb(170, 188, 221);
    font-weight: bold;
    background-color:rgb(32, 71, 180); 
    border-radius:15px
}

.btn .btn-primary .btn-lg {
    background-color: rgb(32, 71, 180);
}

